--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./Js/task-1.js" type="module"></script>
+    <script src="./Js/task-1.js" type="module"></script>
     <script src="./Js/task-2.js" type="module"></script>
-    <script src="./Js/task-3.js" type="module"></script> -->
+    <script src="./Js/task-3.js" type="module"></script>
     <script src="./Js/task-4.js" type="module"></script>
   </body>
 </html>
